Closed
Bug 1283916
Opened 9 years ago
Closed 9 years ago
Incomplete symbolification of js::
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: mccr8, Assigned: ted)
References
Details
For some reason, some crashes end up with a frame where the signature is just "js::".
Here's an example:
https://crash-stats.mozilla.com/report/index/b27d8452-2dfd-405f-af75-82b0a2160617
| Reporter | ||
Comment 1•9 years ago
|
||
It looks like these are all on OSX.
| Assignee | ||
Comment 2•9 years ago
|
||
I think this is just the bug I fixed in:
https://chromium.googlesource.com/breakpad/breakpad/+/2e266396ee14f3c00252863704716b0e4b0fc3f0
| Assignee | ||
Comment 3•9 years ago
|
||
...although maybe that hasn't landed in mozilla-central.
| Reporter | ||
Comment 4•9 years ago
|
||
Great! That certainly looks like the issue here. Fortunately for now it seems like these are all the same crash.
| Assignee | ||
Comment 5•9 years ago
|
||
I have a bug open to update our in-tree Breakpad (bug 1264367) but my try push showed some things that need to be fixed, so we should just cherry-pick that patch from upstream for now.
| Assignee | ||
Comment 6•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/a1162349b49cb3a0107ae6ea07164fc9e94b7cc1
bug 1283916 - Fix DWARF handling of inlined functions in namespaces. r=mento
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → ted
Comment 7•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
| Assignee | ||
Comment 8•9 years ago
|
||
We could uplift this patch if you'd like, it's pretty innocuous and only touches code in dump_syms, not code we ship. This also isn't a high-volume crash, though.
| Reporter | ||
Comment 9•9 years ago
|
||
Yeah, it is probably okay to not bother uplifting it for now.
You need to log in
before you can comment on or make changes to this bug.
Description
•